# TimeBuster

./: .gitignore  CMakeLists.txt  DatabaseManager.h  backendinfo.h  cal.cpp  cal.h  caldavbackend.cpp  caldavbackend.h  calendaritem.cpp  calendaritem.h  calendaritemfactory.cpp  calendaritemfactory.h  calendartableview.cpp  calendartableview.h  calendarview.cpp  calendarview.h  collection.cpp  collection.h  collectioncontroller.cpp  collectioncontroller.h  collectioninfowidget.cpp  collectioninfowidget.h  collectionmanager.cpp  collectionmanager.h  configmanager.cpp  configmanager.h  credentialsdialog.cpp  credentialsdialog.h  databasemanager.cpp  databasemanager.h  deltachange.cpp  deltachange.h  deltaentry.h  editpane.cpp  editpane.h  localbackend.cpp  localbackend.h  main.cpp  mainwindow.cpp  mainwindow.h  (+8 more)
docs/: March20_GrandPLANS.md  March23_GroksGrandPlans.md
tests/: CMakeLists.txt  test_configmanager.cpp  test_localbackend.cpp
